calmed rubocop down

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,8 @@ Style/AlignParameters:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
+Style/ClassVars:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/FileName:
